# book-cpp-algorithms

./: .gitignore  LICENSE.md  README.md  book.tex
.devcontainer/: Dockerfile  devcontainer.json
chapters/: 00_glossary.tex  00_title_page.tex  01_preface.tex  02_introduction.tex  03_algorithms.tex  03_algorithms_00_main.tex  03_algorithms_01_foreach.tex  03_algorithms_02_swaps.tex  03_algorithms_03_sorting.tex  03_algorithms_04_partitioning.tex  03_algorithms_05_divide.tex  03_algorithms_06_linear_sorted.tex  03_algorithms_07_sets.tex  03_algorithms_08_left_folds.tex  03_algorithms_08_transformations.tex  03_algorithms_09_left_folds.tex  03_algorithms_10_general_reductions.tex  03_algorithms_11_boolean.tex  03_algorithms_11_generators.tex  03_algorithms_12_generators.tex  03_algorithms_13_copies_moves.tex  03_algorithms_13_uninitialized.tex  03_algorithms_14_heap.tex  03_algorithms_14_uninitialized.tex  03_algorithms_15_heap.tex  03_algorithms_15_searching.tex  03_algorithms_16_minmax.tex  03_algorithms_16_searching.tex  03_algorithms_17_minmax.tex  04_TODO.tex  04_ranges_in_depth.tex  04_views_00_main.tex  04_views_01_intro_ranges.tex  04_views_02_the_views.tex  06_cpp20_ranges.tex  06_cpp20_ranges_in_depth.tex  07_glossary.tex  08_extra_topics.tex  08_index.tex  90_theory.tex  (+4 more)
code_examples/: CMakeLists.txt  verify.sh
code_examples/algorithms/: CMakeLists.txt  accumulate.cpp  accumulate_code.h  accumulate_right.cpp  accumulate_right_code.h  adjacent_difference.cpp  adjacent_difference_code.h  adjacent_difference_extra.cpp  adjacent_difference_extra_code.h  adjacent_difference_par_code.h  adjacent_find.cpp  adjacent_find_code.h  all_of.cpp  all_of_code.h  binary_search.cpp  binary_search_code.h  bsearch.cpp  bsearch_alternatives.cpp  bsearch_alternatives_code.h  bsearch_code.h  clamp.cpp  clamp_code.h  copy.cpp  copy_backward.cpp  copy_backward_code.h  copy_code.h  copy_if.cpp  copy_if_code.h  copy_n.cpp  copy_n_code.h  count.cpp  count_code.h  create_at.cpp  create_at_code.h  equal.cpp  equal_code.h  equal_range.cpp  equal_range_code.h  equal_with_range.cpp  equal_with_range_code.h  (+179 more)
code_examples/extras/: CMakeLists.txt  priority_queue.cpp  priority_queue_heap_code.h  priority_queue_queue_code.h  span_stringview.cpp  span_stringview_code.h
code_examples/introduction/: CMakeLists.txt  categories.cpp  categories_code.h  history_cc11.cpp  history_cc11_code.h  history_cc17.cpp  history_cc17_code.h  history_cc20.cpp  history_cc20_code.h  history_cc98.cpp  history_cc98_code.h  iterators.cpp  iterators_code.h  mental_find.cpp  mental_find_code.h  mental_range.cpp  mental_range_code.h  mental_sorted.cpp  mental_sorted_code.h  mental_two.cpp  mental_two_code.h  sentinels.cpp  sentinels_code.h
code_examples/ranges/: CMakeLists.txt  borrowed_optin_code.h  concepts.cpp  concepts_code.h  dangling.cpp  dangling_code.h  infinite.cpp  infinite_code.h  projected_type.cpp  projected_type_code.h  projection_code.h  rangified.cpp  rangified_code.h  stateful_code.h  view_demo.cpp  view_demo_code.h
code_examples/theory/: CMakeLists.txt  adl.cpp  adl_code.h  adl_default.cpp  adl_default_code.h  adl_friend.cpp  adl_friend_code.h  adl_niebloid.cpp  adl_niebloid_code.h  adl_nonfunc.cpp  adl_nonfunc_code.h  adl_shutdown.cpp  adl_shutdown_code.h  adl_simple.cpp  adl_simple_code.h  adl_unqalified.cpp  adl_unqalified_code.h  comparable_code.h  const_cast.cpp  const_cast_code.h  deduction_algorithm.h  deduction_concepts.h  floating_point.h  floating_point_ordering.h  initializer_list.cpp  initializer_list_code.h  integral_conversions_different_a.h  integral_conversions_different_b.h  integral_conversions_different_c.h  integral_conversions_problems.h  integral_conversions_same.h  integral_promotions.h  references.h  safe_compare.h  safe_in_range.h  safe_ssize.h
code_examples/views/: CMakeLists.txt  all.cpp  all_code.h  common.cpp  common_code.h  counted.cpp  counted_code.h  drop.cpp  drop_code.h  elements.cpp  elements_code.h  filter.cpp  filter_code.h  iota.cpp  iota_code.h  istream.cpp  istream_code.h  join.cpp  join_code.h  keys_values.cpp  keys_values_code.h  reverse.cpp  reverse_code.h  single.cpp  single_code.h  split.cpp  split_code.h  take.cpp  take_code.h  transform.cpp  transform_code.h
