# Doesn't compile with GCC 11
#add_executable(keys_values keys_values.cpp)
#install(TARGETS keys_values DESTINATION bin)

# Doesn't compile with GCC 11
#add_executable(elements elements.cpp)
#install(TARGETS elements DESTINATION bin)

# Doesn't compile with GCC 11
#add_executable(take take.cpp)
#install(TARGETS take DESTINATION bin)

# Doesn't compile with GCC 11
#add_executable(drop drop.cpp)
#install(TARGETS drop DESTINATION bin)

# Doesn't compile with GCC 11
#add_executable(filter filter.cpp)
#install(TARGETS filter DESTINATION bin)
